--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>org.example</groupId>
     <artifactId>PageObjectModel2</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
